--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.5.0"
   },
   "devDependencies": {
