--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-handlebars": "^5.2.1",
     "express-session": "^1.17.1",
     "handlebars": "^4.7.7",
+    "jquery": "^3.5.1",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
