--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,9 @@
     "no-var": "error",
     "prefer-arrow-callback": "error",
     "prefer-const": "error",
-    "prettier/prettier": "error",
+    "prettier/prettier": ["error", {
+     "endOfLine":"auto"
+   }],
     "quotes": ["error", "double"],
     "semi": ["error", "always"],
     "vars-on-top": "error",
